k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: play-chess
  labels:
    app.kubernetes.io/managed-by: kubectl
