k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: play-chess-api-service
  namespace: play-chess
  labels:
    app: play-chess-api
spec:
  selector:
    app: play-chess-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
