k8s/game-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: play-chess-game-server-service
  namespace: play-chess
  labels:
    app: play-chess-game-server
spec:
  selector:
    app: play-chess-game-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
