k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: play-chess-web-service
  namespace: play-chess
  labels:
    app: play-chess-web
spec:
  selector:
    app: play-chess-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
